--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Prueba git hub</h1>
 <h2>Este archivo fue modificado</h2>
+<p>Este archivo fue modificado 2 veces para poder mergear dev con main</p>
